--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="jualan.css" type="text/css">
-  <link rel="icon" href="https://preview.ibb.co/jQdjuw/LOGO.png"> </head>
+  <link rel="icon" href="https://pasteboard.co/H14pWKF.png"> </head>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
