--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="d-block img-thumbnail img-fluid my-3" src="LOGO.png"> </div>
+          <img class="d-block img-thumbnail img-fluid my-3" src="https://pasteboard.co/H14pWKF.png"> </div>
       </div>
     </div>
   </div>
