--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="jualan.css" type="text/css">
-  <link rel="icon" href="https://pasteboard.co/H14pWKF.png"> </head>
+  <link rel="icon" href="https://cdn.pbrd.co/images/H14pWKF.png"> </head>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="d-block img-thumbnail img-fluid my-3" src="https://pasteboard.co/H14pWKF.png"> </div>
+          <img class="d-block img-thumbnail img-fluid my-3" src="https://cdn.pbrd.co/images/H14pWKF.png"> </div>
       </div>
     </div>
   </div>
