Update index.html for my-project github

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <div class="row mt-5">
             <div class="col-md-5 col-6">
               <a href="#">
-                <img class="center-block img-fluid d-block img-thumbnail px-5" src="../microsoft.png" height=""> </a>
+                <img class="center-block img-fluid d-block img-thumbnail px-5" src="https://cdn.pbrd.co/images/H14t9aN.png" height=""> </a>
             </div>
             <div class="col-6 p-1">
               <a href="#">
-                <img class="center-block img-fluid d-block img-thumbnail bg-dark py-4" src="../steam.png" height=""> </a>
+                <img class="center-block img-fluid d-block img-thumbnail bg-dark py-4" src="https://cdn.pbrd.co/images/H14tD8x.png" height=""> </a>
             </div>
           </div>
         </div>
