--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar3SupportedContent" aria-controls="navbar3SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse text-center justify-content-center" id="navbar3SupportedContent">
         <ul class="navbar-nav"></ul>
-        <a class="ml-3 btn navbar-btn btn-primary text-light border border-secondary" href="#beli">Mau Beli Game Original Murah? Buruan Klik Disini!!!</a>
+        <a class="btn navbar-btn btn-primary text-light border border-secondary" href="#beli">Mau Beli Game Original Murah? Buruan Klik Disini!!!</a>
       </div>
     </div>
   </nav>
